--- a/src/pages/popular/popular.html
+++ b/src/pages/popular/popular.html
@@ -5,7 +5,11 @@
 </ion-header>
 
 <ion-content padding>
-  <mojix-tag>
-    {{ 'genre' }}
-  </mojix-tag>
+  <mojix-movie-card
+    [name]="'asdfasdfasdf'"
+    [summary]="'A man foils an attempted murder, then flees the crew of would-be killers along with their intended target as a woman he just met tries to find him.'"
+    [genres]="['123', 'zzz']"
+    [posterUrl]="'https://image.tmdb.org/t/p/original//zMcEalkxEiRjvmijliLBk0sYern.jpg'"
+  >
+  </mojix-movie-card>
 </ion-content>
